js/src/gc/Tracer.cpp
@@ -383,7 +383,7 @@ MarkStack::setBaseCapacity(JSGCMode mode)
         baseCapacity_ = INCREMENTAL_MARK_STACK_BASE_CAPACITY;
         break;
       default:
-        MOZ_ASSUME_UNREACHABLE("bad gc mode");
+        MOZ_CRASH("bad gc mode");
     }
 
     if (baseCapacity_ > maxCapacity_)
